--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             text-align: center;
-            padding: 20px;
+            padding: 50px;
+        }
+        .container {
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 60%;
+            margin: auto;
         }
         h1 {
             color: #333;
@@ -19,9 +27,27 @@
             font-size: 1.2em;
             color: #555;
         }
-        .container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    
+        .btn {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 12px 25px;
+            font-size: 1.2em;
+            color: white;
+            background: #007BFF;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+        .btn:hover {
+            background: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>🚀 Welcome to My AI & Automation Portfolio!</h1>
+        <p>This is my personal website hosted with GitHub Pages.</p>
+        <a href="https://github.com/Jsammy1890923" class="btn">Visit My GitHub</a>
+    </div>
+</body>
+</html>
