--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
         <p>This is my personal website hosted with GitHub Pages.</p>
         <a href="https://github.com/Jsammy1890923" class="btn">Visit My GitHub</a>
     </div>
+<script src="study-bot.js"></script>
 </body>
 </html>
