--- a/index.html
+++ b/index.html
@@ -3,52 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My Portfolio</title>
+    <title>Ultimate AI Assistant</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
             text-align: center;
-            padding: 50px;
-        }
-        .container {
-            background: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 60%;
-            margin: auto;
-        }
-        h1 {
-            color: #333;
-            font-size: 2.5em;
-        }
-        p {
-            font-size: 1.2em;
-            color: #555;
-        }
-        .btn {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 12px 25px;
-            font-size: 1.2em;
+            background-color: #121212;
             color: white;
-            background: #007BFF;
+            padding: 20px;
+        }
+        h1 { color: #4CAF50; }
+        a {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 10px;
+            color: white;
+            background-color: #007bff;
             text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-        }
-        .btn:hover {
-            background: #0056b3;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>🚀 Welcome to My AI & Automation Portfolio!</h1>
-        <p>This is my personal website hosted with GitHub Pages.</p>
-        <a href="https://github.com/Jsammy1890923" class="btn">Visit My GitHub</a>
-    </div>
-<script src="study-bot.js"></script>
-</body>
-</html>
+            border
