--- a/index.html
+++ b/index.html
@@ -3,21 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ultimate AI Assistant</title>
+    <title>Ultimate AI Assistant - Neon Nights</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Orbitron', sans-serif;
             text-align: center;
-            background-color: #121212;
-            color: white;
+            background-color: #080808;
+            color: #39FF14;
             padding: 20px;
+            overflow: hidden;
         }
-        h1 { color: #4CAF50; }
-        a {
+
+        h1 {
+            font-size: 3rem;
+            text-transform: uppercase;
+            text-shadow: 0 0 15px #39FF14, 0 0 30px #00FFFF;
+            animation: flicker 1.5s infinite alternate;
+        }
+
+        p {
+            font-size: 1.2rem;
+            color: #00FFFF;
+            text-shadow: 0 0 10px #00FFFF;
+        }
+
+        .neon-button {
             display: inline-block;
-            padding: 10px 20px;
-            margin: 10px;
-            color: white;
-            background-color: #007bff;
+            padding: 15px 25px;
+            margin: 20px;
+            font-size: 1.2rem;
+            text-transform: uppercase;
             text-decoration: none;
-            border
+            color: #00
